iss: Fix CTZ normalization (#613)
The built-in status dispatcher wrongly called the CLZ normalization handler instead of the CTZ one.